--- a/beauty-flow-backend/package.json
+++ b/beauty-flow-backend/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
-    "start": "node dist/app.js",
-    "start:prod": "NODE_ENV=production node dist/app.js",
+    "start": "npx ts-node src/app.ts",
+    "start:prod": "NODE_ENV=production npx ts-node src/app.ts",
+    "start:compiled": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "tsc --noEmit"
   },
