--- a/package.json
+++ b/package.json
@@ -1,11 +1,47 @@
 {
-  "dependencies": {
-    "@types/uuid": "^10.0.0",
-    "react-google-recaptcha": "^3.1.0",
-    "uuid": "^11.0.5",
-    "zustand": "^5.0.3"
+  "name": "saloneo-app",
+  "version": "1.0.0",
+  "description": "Saloneo - Application complète de gestion de salon de beauté",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "build": "npm run build:frontend && npm run copy:backend",
+    "build:frontend": "cd beauty-flow && npm install && npm run build",
+    "copy:backend": "cp -r beauty-flow-backend ./",
+    "dev": "npm run build && npm start",
+    "install:all": "npm install && cd beauty-flow && npm install && cd ../beauty-flow-backend && npm install",
+    "test": "echo \"Tests à implémenter\" && exit 0"
   },
-  "devDependencies": {
-    "@types/react-google-recaptcha": "^2.1.9"
+  "keywords": [
+    "salon",
+    "beauté",
+    "gestion",
+    "rendez-vous",
+    "saloneo"
+  ],
+  "author": "Trio Digital",
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.21.2",
+    "cors": "^2.8.5",
+    "mongoose": "^8.9.2",
+    "dotenv": "^16.4.7",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "helmet": "^8.0.0",
+    "express-rate-limit": "^7.5.0",
+    "express-validator": "^7.2.1",
+    "joi": "^17.13.3",
+    "axios": "^1.10.0",
+    "sharp": "^0.33.5",
+    "socket.io": "^4.8.1",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0",
+    "chalk": "^4.1.2"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
