Fix TypeScript errors: add missing types, update vite-env.d.ts, exclude test files from build

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Configuration MongoDB
-MONGODB_URI=mongodb+srv://tradi:AAZij4XCzq0Hz3h2@tradition-elle.tnpkqvw.mongodb.net/?retryWrites=true&w=majority&appName=Tradition-ELLE
+MONGODB_URI=mongodb+srv://trioadsmain:qw9Wl1bNwodxv3Ra@cluster0.es8njbw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # Configuration JWT
 JWT_SECRET=saloneo_super_secret_key_2025_production_xyz789
