--- a/beauty-flow/package.json
+++ b/beauty-flow/package.json
@@ -26,6 +26,7 @@
     "@types/i18next": "^12.1.0",
     "@types/qrcode": "^1.5.5",
     "@types/react-i18next": "^7.8.3",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.10.0",
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
@@ -45,6 +46,7 @@
     "react-router-dom": "^6.21.1",
     "socket.io-client": "^4.8.1",
     "three": "^0.160.1",
+    "uuid": "^11.1.0",
     "web-vitals": "^4.2.4",
     "zustand": "^5.0.3"
   },
