--- a/beauty-flow-backend/package.json
+++ b/beauty-flow-backend/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
-    "start": "npx ts-node src/app.ts",
-    "start:prod": "NODE_ENV=production npx ts-node src/app.ts",
+    "start": "node dist/app.js",
+    "start:prod": "NODE_ENV=production node dist/app.js",
     "start:compiled": "node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "tsc --noEmit"
+    "lint": "tsc --noEmit",
+    "postbuild": "cp -r uploads dist/ 2>/dev/null || mkdir -p dist/uploads"
   },
   "keywords": [
     "beauty",
