--- a/beauty-flow/package.json
+++ b/beauty-flow/package.json
@@ -48,7 +48,8 @@
     "three": "^0.160.1",
     "uuid": "^11.1.0",
     "web-vitals": "^4.2.4",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "@types/react-dom": "^18.2.18"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
