🔧 Fix deployment issues: correct MongoDB URI and remove ts-node dependency
- Fixed server.js to work without ts-node in production
- Updated MongoDB URI with correct cluster name (es8njbw)
- Application tested and working locally
- Ready for Render deployment

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Configuration MongoDB
-MONGODB_URI=mongodb+srv://trioadsmain:qw9Wl1bNwodxv3Ra@cluster0.es8njbw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://trioadsmain:qw9Wl1bNwodxv3Ra@cluster0.es8njbw.mongodb.net/saloneo?retryWrites=true&w=majority
 
 # Configuration JWT
 JWT_SECRET=saloneo_super_secret_key_2025_production_xyz789
