--- a/render.yaml
+++ b/render.yaml
@@ -28,7 +28,7 @@ services:
       - key: PORT
         value: 10000
       - key: MONGODB_URI
-        sync: false
+        value: mongodb+srv://saloneo-user:s8OfObmiaiug2zOt@clustertriogeneral.hvkpnvh.mongodb.net/saloneo?retryWrites=true&w=majority&appName=ClusterTrioGeneral
       - key: JWT_SECRET
         generateValue: true
       - key: JWT_EXPIRES_IN
