--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Configuration MongoDB
-MONGODB_URI=mongodb+srv://trioadsmain:qw9Wl1bNwodxv3Ra@cluster0.es8njbw.mongodb.net/saloneo?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://saloneo-user:s8OfObmiaiug2zOt@clustertriogeneral.hvkpnvh.mongodb.net/saloneo?retryWrites=true&w=majority&appName=ClusterTrioGeneral
 
 # Configuration JWT
 JWT_SECRET=saloneo_super_secret_key_2025_production_xyz789
