--- a/package.json
+++ b/package.json
@@ -22,23 +22,24 @@
   "author": "Trio Digital",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.21.2",
-    "cors": "^2.8.5",
-    "mongoose": "^8.9.2",
-    "dotenv": "^16.4.7",
+    "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "helmet": "^8.0.0",
+    "chalk": "^4.1.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
+    "helmet": "^8.0.0",
     "joi": "^17.13.3",
-    "axios": "^1.10.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.2",
+    "multer": "^1.4.5-lts.1",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
+    "ts-node": "^10.9.2",
     "uuid": "^11.1.0",
-    "winston": "^3.17.0",
-    "chalk": "^4.1.2"
+    "winston": "^3.17.0"
   },
   "engines": {
     "node": ">=18.0.0",
