--- a/beauty-flow-backend/package.json
+++ b/beauty-flow-backend/package.json
@@ -47,14 +47,14 @@
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
     "uuid": "^11.1.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
-    "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2"
+    "nodemon": "^3.1.9"
   },
   "engines": {
     "node": ">=18.0.0",
