Fix: Remplacer server.js par la logique fonctionnelle et nettoyer les fichiers inutiles - Utilise ts-node pour importer les routes TypeScript directement - Supprime server-final.js, server-simple.js, server-deploy.js - Met à jour render.yaml pour utiliser node server.js - Code plus propre et maintenable

--- a/render.yaml
+++ b/render.yaml
@@ -20,7 +20,7 @@ services:
       mkdir -p ../beauty-flow-backend/dist/public &&
       cp -r dist/* ../beauty-flow-backend/dist/public/ &&
       echo "=== BUILD TERMINÉ ==="
-    startCommand: node server-final.js
+    startCommand: node server.js
     autoDeploy: true
     envVars:
       - key: NODE_ENV
