--- a/render.yaml
+++ b/render.yaml
@@ -18,14 +18,9 @@ services:
       npm run build &&
       echo "=== VÉRIFICATION BUILD FRONTEND ===" &&
       ls -la dist/ &&
-      echo "=== COPIE FRONTEND VERS BACKEND ===" &&
-      mkdir -p ../beauty-flow-backend/dist/public &&
-      cp -r dist/* ../beauty-flow-backend/dist/public/ &&
-      echo "=== VÉRIFICATION COPIE ===" &&
-      ls -la ../beauty-flow-backend/dist/public/ &&
       echo "=== VÉRIFICATION INDEX.HTML ===" &&
-      ls -la ../beauty-flow-backend/dist/public/index.html &&
-      echo "=== BUILD TERMINÉ ==="
+      ls -la dist/index.html &&
+      echo "=== BUILD TERMINÉ - Frontend dans beauty-flow/dist ==="
     startCommand: node server.js
     autoDeploy: true
     envVars:
