--- a/beauty-flow/package.json
+++ b/beauty-flow/package.json
@@ -7,7 +7,7 @@
   "homepage": "https://saloneo.app",
   "scripts": {
     "dev": "vite --host 0.0.0.0 --port 3000",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "start": "vite preview --port 3000 --host",
     "preview": "vite preview",
     "test": "vitest run",
