SOLUTION FINALE: Script de build robuste pour le frontend

--- a/render.yaml
+++ b/render.yaml
@@ -5,29 +5,7 @@ services:
     env: node
     plan: starter
     region: oregon
-    buildCommand: |
-      echo "=== INSTALLATION BACKEND ===" &&
-      cd beauty-flow-backend &&
-      npm install &&
-      echo "=== BUILD BACKEND ===" &&
-      npm run build &&
-      echo "=== INSTALLATION FRONTEND ===" &&
-      cd ../beauty-flow &&
-      npm install &&
-      echo "=== DIAGNOSTIC PRE-BUILD ===" &&
-      pwd &&
-      ls -la &&
-      echo "=== VÉRIFICATION PACKAGE.JSON ===" &&
-      cat package.json | grep '"build"' &&
-      echo "=== BUILD FRONTEND AVEC DEBUG ===" &&
-      npm run build --verbose 2>&1 || (echo "❌ ERREUR BUILD FRONTEND:" && npm run build 2>&1 && exit 1) &&
-      echo "=== VÉRIFICATION POST-BUILD ===" &&
-      ls -la &&
-      echo "=== VÉRIFICATION DOSSIER DIST ===" &&
-      if [ -d "dist" ]; then echo "✅ Dossier dist existe" && ls -la dist/; else echo "❌ Dossier dist n'existe pas"; fi &&
-      echo "=== VÉRIFICATION INDEX.HTML ===" &&
-      if [ -f "dist/index.html" ]; then echo "✅ index.html trouvé" && ls -la dist/index.html; else echo "❌ index.html non trouvé"; fi &&
-      echo "=== BUILD TERMINÉ ==="
+    buildCommand: chmod +x build-and-deploy.sh && ./build-and-deploy.sh
     startCommand: node server.js
     autoDeploy: true
     envVars:
