🚀 Architecture de déploiement unifiée pour Render
✅ Solution complète implémentée:
- server-unified.js: Serveur Express unifié (frontend + backend)
- .render.yaml: Configuration optimisée avec build en 3 étapes
- Variables d'environnement corrigées vers saloneo-deploy.onrender.com
- Guide de déploiement final avec documentation complète

🎯 Cette solution résout définitivement:
- Plus de 'Cannot GET /'
- Plus de page HTML fallback
- Architecture robuste et maintenable

--- a/.render.yaml
+++ b/.render.yaml
@@ -1,46 +1,49 @@
 services:
-  # Service unifié (frontend + backend)
+  # Service unifié optimisé pour Saloneo
   - type: web
-    name: saloneo-app
+    name: saloneo-deploy
     env: node
     plan: starter
     region: oregon
     buildCommand: |
-      echo "🚀 === DÉBUT BUILD SALONEO ROBUSTE V3 ===" &&
-      echo "📍 Répertoire de travail: $(pwd)" &&
-      echo "📂 Contenu du répertoire:" &&
+      echo "🚀 === BUILD SALONEO OPTIMISÉ ===" &&
+      echo "📍 Répertoire: $(pwd)" &&
+      echo "📂 Contenu:" &&
       ls -la &&
-      echo "🔧 === INSTALLATION GLOBALE DES OUTILS ===" &&
-      npm install -g typescript vite @types/node &&
-      echo "🏗️ === BUILD BACKEND TYPESCRIPT ===" &&
-      cd beauty-flow-backend &&
-      echo "📦 Installation des dépendances backend..." &&
-      npm install &&
-      echo "🔨 Compilation TypeScript..." &&
-      npx tsc &&
-      echo "✅ Vérification backend compilé..." &&
-      if [ -f "dist/app.js" ]; then 
-        echo "✅ Backend compilé avec succès:" && ls -la dist/
-      else 
-        echo "❌ Erreur compilation backend" && exit 1
-      fi &&
-      echo "🎨 === BUILD FRONTEND REACT ===" &&
-      cd ../beauty-flow &&
-      echo "📦 Installation des dépendances frontend..." &&
-      npm install &&
-      echo "🎯 Build frontend avec variables d'environnement..." &&
-      VITE_API_URL=https://saloneo-app.onrender.com/api VITE_ENV=production VITE_APP_NAME=Saloneo VITE_SITE_URL=https://saloneo-app.onrender.com npm run build &&
-      echo "✅ Vérification frontend build..." &&
-      if [ -d "dist" ] && [ -f "dist/index.html" ]; then 
-        echo "✅ Frontend build réussi:" && ls -la dist/ && echo "📄 Index.html:" && head -3 dist/index.html
-      else 
-        echo "❌ Erreur build frontend" && exit 1
-      fi &&
-      echo "🔧 === INSTALLATION DÉPENDANCES RACINE ===" &&
+      echo "" &&
+      echo "🎯 === ÉTAPE 1: BUILD FRONTEND ===" &&
+      cd beauty-flow &&
+      echo "📦 Installation dépendances frontend..." &&
+      npm ci --only=production &&
+      echo "🏗️ Build Vite..." &&
+      npm run build &&
+      echo "✅ Vérification build frontend:" &&
+      ls -la dist/ &&
+      echo "" &&
+      echo "🎯 === ÉTAPE 2: PRÉPARATION BACKEND ===" &&
+      cd ../beauty-flow-backend &&
+      echo "📦 Installation dépendances backend..." &&
+      npm ci --only=production &&
+      echo "" &&
+      echo "🎯 === ÉTAPE 3: ASSEMBLAGE FINAL ===" &&
       cd .. &&
-      npm install &&
+      echo "📁 Copie du frontend buildé..." &&
+      cp -r beauty-flow/dist ./dist &&
+      echo "📁 Copie des uploads..." &&
+      mkdir -p uploads &&
+      echo "📁 Copie des dépendances backend..." &&
+      cp -r beauty-flow-backend/node_modules ./node_modules &&
+      cp -r beauty-flow-backend/src ./backend-src &&
+      echo "" &&
+      echo "✅ === VÉRIFICATION FINALE ===" &&
+      echo "📁 Structure finale:" &&
+      ls -la &&
+      echo "📁 Contenu dist:" &&
+      ls -la dist/ &&
+      echo "📄 Index.html:" &&
+      ls -la dist/index.html &&
       echo "🎉 === BUILD TERMINÉ AVEC SUCCÈS ==="
-    startCommand: node server.js
+    startCommand: node server-unified.js
     autoDeploy: true
     envVars:
       - key: NODE_ENV
@@ -58,17 +61,9 @@ services:
       - key: JWT_REFRESH_EXPIRES_IN
         value: 30d
       - key: FRONTEND_URL
-        value: https://saloneo-app.onrender.com
+        value: https://saloneo-deploy.onrender.com
       - key: CORS_ORIGIN
-        value: https://saloneo-app.onrender.com
-      - key: VITE_API_URL
-        value: https://saloneo-app.onrender.com/api
-      - key: VITE_ENV
-        value: production
-      - key: VITE_APP_NAME
-        value: Saloneo
-      - key: VITE_SITE_URL
-        value: https://saloneo-app.onrender.com
+        value: https://saloneo-deploy.onrender.com
       - key: MAX_FILE_SIZE
         value: 5242880
       - key: UPLOAD_DIR
