--- a/beauty-flow/.env.production
+++ b/beauty-flow/.env.production
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_URL=https://saloneo-app.onrender.com/api
+VITE_API_URL=https://saloneo-deploy.onrender.com/api
 
 # Environment
 VITE_ENV=production
@@ -8,4 +8,4 @@ VITE_ENV=production
 VITE_APP_NAME=Saloneo
 
 # Site URL
-VITE_SITE_URL=https://saloneo-app.onrender.com
+VITE_SITE_URL=https://saloneo-deploy.onrender.com
