--- a/package.json
+++ b/package.json
@@ -1,36 +1,48 @@
 {
-  "name": "saloneo-deploy",
+  "name": "saloneo-app",
   "version": "1.0.0",
-  "description": "Saloneo - Plateforme de gestion complète pour salons de beauté",
+  "description": "Saloneo - Application complète de gestion de salon de beauté",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js",
-    "build": "echo 'Build handled by Render buildCommand'",
-    "test": "echo 'No tests specified'",
-    "postinstall": "echo 'Dependencies installed successfully'"
+    "build": "npm run build:frontend && npm run copy:backend",
+    "build:frontend": "cd beauty-flow && npm install && npm run build",
+    "copy:backend": "cp -r beauty-flow-backend ./",
+    "dev": "npm run build && npm start",
+    "install:all": "npm install && cd beauty-flow && npm install && cd ../beauty-flow-backend && npm install",
+    "test": "echo \"Tests à implémenter\" && exit 0"
   },
   "keywords": [
     "salon",
-    "beauty",
-    "management",
-    "appointments",
+    "beauté",
+    "gestion",
+    "rendez-vous",
     "saloneo"
   ],
-  "author": "Saloneo Team",
+  "author": "Trio Digital",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.21.2",
+    "axios": "^1.10.0",
+    "bcryptjs": "^2.4.3",
+    "chalk": "^4.1.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "express-validator": "^7.2.1",
+    "helmet": "^8.0.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.2",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.5",
+    "socket.io": "^4.8.1",
+    "ts-node": "^10.9.2",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   },
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Trio-Ads/saloneo-deploy.git"
-  },
-  "homepage": "https://saloneo-app.onrender.com"
+  }
 }
