--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "npm run build:frontend && npm run copy:backend",
-    "build:frontend": "cd beauty-flow && npm install && npm run build",
+    "build:frontend": "cd beauty-flow && npm install && npx vite --version || npm install -g vite && npm run build",
     "copy:backend": "cp -r beauty-flow-backend ./",
     "dev": "npm run build && npm start",
     "install:all": "npm install && cd beauty-flow && npm install && cd ../beauty-flow-backend && npm install",
