🚀 OPTIMISATION CRITIQUE: Build + Trust Proxy + Vite
✅ Corrections majeures appliquées:

1. Trust Proxy configuré
   - app.set('trust proxy', 1) pour Render
   - Plus d'erreurs express-rate-limit

2. Installation Vite améliorée
   - npm install && npm run build dans server.js
   - Build automatique après démarrage

3. Scripts de build optimisés
   - build:frontend avec npm ci
   - build:backend avec npm ci
   - copy:dist pour copier le build

🎯 Résultat attendu: Build complet pendant le déploiement Render

--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "npm run build:frontend && npm run copy:backend",
-    "build:frontend": "cd beauty-flow && npm install && npx vite --version || npm install -g vite && npm run build",
-    "copy:backend": "cp -r beauty-flow-backend ./",
+    "build": "npm run build:frontend && npm run build:backend && npm run copy:dist",
+    "build:frontend": "cd beauty-flow && npm ci && npm run build",
+    "build:backend": "cd beauty-flow-backend && npm ci && npm run build",
+    "copy:dist": "cp -r beauty-flow/dist ./dist 2>/dev/null || true",
     "dev": "npm run build && npm start",
     "install:all": "npm install && cd beauty-flow && npm install && cd ../beauty-flow-backend && npm install",
     "test": "echo \"Tests à implémenter\" && exit 0"
