🔧 Fix: Installation complète des dépendances pour Vite
- Retiré --only=production pour installer toutes les dépendances
- Cela permet d'installer vite qui est une devDependency
- Résout l'erreur 'vite: not found' lors du build

--- a/.render.yaml
+++ b/.render.yaml
@@ -14,7 +14,7 @@ services:
       echo "🎯 === BUILD FRONTEND ===" &&
       cd beauty-flow &&
       echo "📦 Installation dépendances frontend..." &&
-      npm ci --only=production &&
+      npm ci &&
       echo "🏗️ Build Vite..." &&
       npm run build &&
       echo "✅ Vérification build frontend:" &&
