🌐 Configuration domaine saloneo.app
✅ Changements appliqués:
- render.yaml: FRONTEND_URL et CORS_ORIGIN vers www.saloneo.app
- beauty-flow/.env.production: URLs API et Socket vers www.saloneo.app
- DEPLOIEMENT_FINAL.md: Documentation mise à jour

🎯 Prêt pour utiliser le domaine personnalisé saloneo.app

--- a/render.yaml
+++ b/render.yaml
@@ -24,9 +24,9 @@ services:
       - key: JWT_REFRESH_EXPIRES_IN
         value: 30d
       - key: FRONTEND_URL
-        value: https://saloneo-deploy.onrender.com
+        value: https://www.saloneo.app
       - key: CORS_ORIGIN
-        value: https://saloneo-deploy.onrender.com
+        value: https://www.saloneo.app,https://saloneo.app
       - key: MAX_FILE_SIZE
         value: 5242880
       - key: UPLOAD_DIR
