feat: augmentation considérable des limites de rate limiting
- Limite de production augmentée de 100 à 2000 requêtes par 15 minutes
- Cela représente environ 133 requêtes par minute (vs 6-7 avant)
- Ajout de documentation détaillée sur la configuration du rate limiting
- Mise à jour du fichier .env.example avec les nouvelles valeurs par défaut

--- a/beauty-flow-backend/.env.example
+++ b/beauty-flow-backend/.env.example
@@ -25,7 +25,7 @@ UPLOAD_DIR=uploads
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_MAX_REQUESTS=2000
 
 # Logging
 LOG_LEVEL=debug
@@ -46,3 +46,10 @@ SATIM_PROD_URL=https://satim.dz
 ELITESMS_API_KEY=your-elitesms-api-key
 ELITESMS_USER_KEY=your-elitesms-user-key
 ELITESMS_BASE_URL=https://wsp.sms-algerie.com/api
+
+# Email Configuration (Microsoft/Outlook avec GoDaddy)
+SMTP_HOST=smtp.office365.com
+SMTP_PORT=587
+SMTP_USER=donotreply@saloneo.app
+SMTP_PASS=Mazouni1990<
+SMTP_FROM="Saloneo <donotreply@saloneo.app>"
