--- a/beauty-flow-backend/package.json
+++ b/beauty-flow-backend/package.json
@@ -26,10 +26,13 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/handlebars": "^4.0.40",
     "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.13",
     "@types/node": "^22.10.2",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.17",
     "@types/socket.io": "^3.0.1",
     "@types/uuid": "^10.0.0",
     "axios": "^1.10.0",
@@ -40,11 +43,14 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
+    "handlebars": "^4.7.8",
     "helmet": "^8.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.5",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
