--- a/beauty-flow-backend/package.json
+++ b/beauty-flow-backend/package.json
@@ -23,6 +23,8 @@
   "author": "Beauty Flow Team",
   "license": "ISC",
   "dependencies": {
+    "@bull-board/api": "^6.13.0",
+    "@bull-board/express": "^6.13.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
@@ -35,22 +37,39 @@
     "@types/nodemailer": "^6.4.17",
     "@types/socket.io": "^3.0.1",
     "@types/uuid": "^10.0.0",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.10.0",
+    "axios-retry": "^4.5.0",
     "bcryptjs": "^2.4.3",
+    "bull": "^4.16.5",
+    "bull-board": "^1.7.2",
     "chalk": "^4.1.2",
+    "cloudinary": "^1.41.3",
+    "connect-redis": "^9.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-gateway": "^1.16.11",
+    "express-prometheus-middleware": "^1.2.0",
     "express-rate-limit": "^7.5.0",
+    "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
     "handlebars": "^4.7.8",
     "helmet": "^8.0.0",
+    "ioredis": "^5.8.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "node-circuit-breaker": "^0.1.1",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
+    "opossum": "^9.0.0",
+    "p-retry": "^7.0.0",
+    "prom-client": "^13.2.0",
+    "redis": "^5.8.2",
     "sharp": "^0.33.5",
     "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
@@ -60,6 +79,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
+    "@types/opossum": "^8.1.9",
     "nodemon": "^3.1.9"
   },
   "engines": {
