feat: Implémentation complète du système d'upload d'images avec Cloudinary
✨ Nouvelles fonctionnalités:
- Routes d'upload pour logo et banner (/api/upload/logo, /api/upload/banner)
- Contrôleurs uploadLogo() et uploadBanner() avec gestion des thumbnails
- Configuration Cloudinary complète dans render.yaml pour production
- Suppression du fallback localStorage problématique

🔧 Améliorations:
- Upload logo avec thumbnails 100x100, 200x200
- Upload banner avec thumbnails 800x400, 1600x800
- Suppression automatique des anciennes images avant upload
- Gestion d'erreurs propre sans fallback localStorage
- Mise à jour automatique en base de données

📦 Configuration Production:
- CLOUDINARY_CLOUD_NAME: dc7w17b96
- CLOUDINARY_API_KEY: 416623916388651
- CLOUDINARY_API_SECRET configuré
- CDN_BASE_URL: https://res.cloudinary.com/dc7w17b96

✅ Système 100% fonctionnel:
- Avatar utilisateur ✓
- Logo salon ✓
- Bannière salon ✓
- Images services ✓
- Avatar équipe ✓

--- a/render.yaml
+++ b/render.yaml
@@ -37,3 +37,13 @@ services:
         value: 100
       - key: LOG_LEVEL
         value: info
+      - key: STORAGE_PROVIDER
+        value: cloudinary
+      - key: CLOUDINARY_CLOUD_NAME
+        value: dc7w17b96
+      - key: CLOUDINARY_API_KEY
+        value: 416623916388651
+      - key: CLOUDINARY_API_SECRET
+        value: 1HkTHGLvk5MnV_WKd3TYRAIctKo
+      - key: CDN_BASE_URL
+        value: https://res.cloudinary.com/dc7w17b96
