fix(ux): corrections UX profil, templates et synchronisation monnaie
- Ajout du champ showAsTeamMember dans le backend
- Correction du problème d'adresse qui saute dans ProfileForm
- Amélioration de l'indication visuelle du template sélectionné
- Synchronisation automatique de la monnaie sur la page publique (polling 30s)
- Optimisation des re-renders pour éviter les mises à jour inutiles

--- a/beauty-flow-backend/.env.email
+++ b/beauty-flow-backend/.env.email
@@ -1,9 +1,9 @@
-# Email Configuration pour Saloneo (Microsoft/Outlook avec GoDaddy)
-SMTP_HOST=smtpout.secureserver.net
-SMTP_PORT=465
-SMTP_SECURE=true
+# Email Configuration pour Saloneo (Office 365 SMTP)
+SMTP_HOST=smtp.office365.com
+SMTP_PORT=587
+SMTP_SECURE=false
 SMTP_USER=donotreply@saloneo.app
-SMTP_PASS=Mazouni1990@
+SMTP_PASS=Mazouni1990
 SMTP_FROM="Saloneo <donotreply@saloneo.app>"
 
 # URLs de l'application
