--- a/beauty-flow/package.json
+++ b/beauty-flow/package.json
@@ -25,6 +25,7 @@
     "@types/canvas-confetti": "^1.9.0",
     "@types/i18next": "^12.1.0",
     "@types/qrcode": "^1.5.5",
+    "@types/react-dom": "^18.2.18",
     "@types/react-i18next": "^7.8.3",
     "@types/uuid": "^10.0.0",
     "axios": "^1.10.0",
@@ -43,13 +44,13 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.0",
+    "react-phone-number-input": "^3.4.12",
     "react-router-dom": "^6.21.1",
     "socket.io-client": "^4.8.1",
     "three": "^0.160.1",
     "uuid": "^11.1.0",
     "web-vitals": "^4.2.4",
-    "zustand": "^5.0.3",
-    "@types/react-dom": "^18.2.18"
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
