--- a/beauty-flow-backend/package.json
+++ b/beauty-flow-backend/package.json
@@ -79,8 +79,13 @@
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
+    "@types/jest": "^30.0.0",
     "@types/opossum": "^8.1.9",
-    "nodemon": "^3.1.9"
+    "@types/supertest": "^6.0.3",
+    "jest": "^30.2.0",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5"
   },
   "engines": {
     "node": ">=18.0.0",
